<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:minWidth="400dp"
    android:layout_height="match_parent">
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/idImageResource"
        android:layout_margin="@dimen/dimen_margin_large"
        app:srcCompat="@android:drawable/ic_dialog_email"
        android:tint="@color/colorPrimary"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_width="60dp"
        android:layout_height="60dp" />
    <com.pagatodo.apolo.utils.customviews.MaterialTextView
        android:id="@+id/tvTitle"
        app:tipo="Titulo"
        android:textColor="@color/colorPrimary"
        android:text="@string/txt_title"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:maxLines="2"
        android:padding="@dimen/dimen_padding_large"
        android:textSize="@dimen/dimen_textSize_xl"
        android:layout_margin="@dimen/dimen_margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.pagatodo.apolo.utils.customviews.MaterialTextView
        android:id="@+id/tvContent"
        android:layout_margin="@dimen/dimen_margin_medium"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/txt_errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_margin="@dimen/dimen_margin_medium"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.pagatodo.apolo.utils.customviews.MaterialButton
            android:layout_margin="@dimen/dimen_margin_small"
            android:id="@+id/btnPrimary"
            android:text="@string/txt_button_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_button_height"
            android:textColor="@color/white"
            app:intercepterOnclick="true"
            app:buttonNormalColor="@color/colorPrimary"
            app:buttonStrokeColor="@color/colorPrimary"
            app:cornerRadius="25dp"/>
        <com.pagatodo.apolo.utils.customviews.MaterialButton
            android:layout_margin="@dimen/dimen_margin_small"
            android:id="@+id/btnSecondary"
            android:text="@string/txt_button_continue"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_button_height"
            android:textColor="@color/white"
            app:intercepterOnclick="true"
            app:buttonNormalColor="@color/colorPrimary"
            app:buttonStrokeColor="@color/colorPrimary"
            app:cornerRadius="25dp"/>
    </LinearLayout>
</LinearLayout>