<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
        <com.pagatodo.apolo.utils.customviews.MaterialTextView
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/dimen_textSize_large"
            android:padding="@dimen/dimen_padding_xl"
            android:layout_margin="@dimen/dimen_margin_medium"
            android:text="@string/dialog_status_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            app:tipo="Titulo"/>
            <FrameLayout
                android:layout_width="200dp"
                android:layout_height="200dp">
                <FrameLayout
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:id="@+id/fl_Progress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <FrameLayout
                        android:layout_margin="@dimen/dimen_margin_large"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <com.mikhaellopez.circularprogressbar.CircularProgressBar
                            android:id="@+id/status_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:cpb_background_progressbar_color="#FFCDD2"
                            app:cpb_background_progressbar_width="5dp"
                            app:cpb_progressbar_color="@color/colorPrimary"
                            app:cpb_progressbar_width="10dp" />
                        <com.pagatodo.apolo.utils.customviews.MaterialTextView
                            android:id="@+id/progressDocuments"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="@string/dialog_status_upload"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </FrameLayout>
                </FrameLayout>
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/ll_Status"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_gravity="center">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:id="@+id/ivStatus"/>
                    <com.pagatodo.apolo.utils.customviews.MaterialTextView
                        android:id="@+id/tv_Status"
                        android:layout_gravity="center"
                        android:gravity="center"
                        app:tipo="Descripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_margin_medium">
            <com.pagatodo.apolo.utils.customviews.MaterialButton
                android:id="@+id/btn_action"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_button_height"
                android:layout_marginBottom="@dimen/dimen_margin_xl"
                android:text="@string/dialog_text_next"
                app:textColor="@color/white"
                app:hintColor="@color/white"
                app:buttonNormalColor="@color/colorPrimary"
                app:buttonStrokeColor="@color/colorPrimary"
                app:cornerRadius="@dimen/dimen_button_radius"/>
        </LinearLayout>
        </LinearLayout>

</LinearLayout >
</android.support.design.widget.CoordinatorLayout>